fix overflow in layout (#14)

--- a/src/components/card-section/cardSection.scss
+++ b/src/components/card-section/cardSection.scss
@@ -1,4 +1,5 @@
 .cs-container {
+  overflow: hidden;
   height: 100%;
   background: #100E1D;
   border-top-left-radius: 40px;
